# mr2022

./: .README.md.kate-swp  .gitignore  README.md  README.md.backup
mr/: CMakeLists.txt  package.xml
mr_geometry/: CMakeLists.txt  package.xml
mr_geometry/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
mr_geometry/include/mr_geometry/: figure.h  geometry.h  layered_figure.h  layered_maps.h  line2d.h  linesegment2d.h  linesegment2d_detector.h  measurement.h  point2d.h
mr_geometry/src/mr_geometry/: __init__.py  figure.cpp  geometry.cpp  geometry_wrapper.cpp  layered_maps.cpp  line2d.cpp  linesegment2d.cpp  linesegment2d_detector.cpp  measurement.cpp  point2d.cpp  world_scoped_maps.cpp
mr_geometry/test/: test_cases.py
mr_global_planner/: CMakeLists.txt  package.xml
mr_global_planner/include/: global_planner_node.h
mr_global_planner/include/mr_global_planner/: global_planner.h
mr_global_planner/src/: global_planner_node.cpp
mr_global_planner/src/mr_global_planner/: global_planner.cpp
mr_goto/: CMakeLists.txt  package.xml
mr_goto/cfg/: Gains.cfg  goto.cfg
mr_goto/include/: goto_node.h
mr_goto/include/mr_goto/: goto.h  map.h  micropather.h
mr_goto/launch/: goto.launch  goto.rviz  mr_filter.launch  mr_wall_follow.launch  planner_multi.launch
mr_goto/scripts/: .mr_goto.py.kate-swp  mr_goto.py
mr_goto/src/: goto_node.cpp
mr_goto/src/mr_goto/: goto.cpp  map.cpp  micropather.cpp
mr_launch/: CMakeLists.txt  package.xml
mr_launch/cfg/global_planner/: costmap.yaml
mr_launch/cfg/maps/: cave.yaml  fiducial.yaml  iu.yaml  line.yaml  rectangle.yaml
mr_launch/cfg/rviz/: map.rviz  rviz_mr.rviz
mr_launch/launch/: amcl.launch  change_the_world.launch  global_planner.launch  goto.launch  hw.launch  map_server.launch  move_base_stage.launch  planner.launch  view_map.launch
mr_launch/launch/r0/: aria_twist.launch  laser_hokuyo.launch  move_base.launch  robot_description.launch
mr_launch/rviz/: goto1.rviz
mr_local_planner/: CMakeLists.txt  config.rviz  package.xml
mr_local_planner/cfg/: LocalPlanner.cfg
mr_local_planner/include/: custom_planner_node.h  local_planner_node.h  target_planner_node.h
mr_local_planner/include/mr_custom_planner/: custom_planner.h
mr_local_planner/include/mr_local_planner/: local_planner.h
mr_local_planner/include/mr_target_planner/: target_planner.h
mr_local_planner/launch/: my_planner.launch  planner.launch  planner_multi.launch  target_planner.launch
mr_local_planner/scripts/: global_planner.py  global_planner_mock.py  global_planner_save_image.py
mr_local_planner/src/: custom_planner_node.cpp  local_planner_node.cpp  target_planner_node.cpp
mr_local_planner/src/mr_custom_planner/: custom_planner.cpp
mr_local_planner/src/mr_local_planner/: local_planner.cpp
mr_local_planner/src/mr_target_planner/: target_planner.cpp
mr_monitor/: CMakeLists.txt  package.xml
mr_monitor/src/: monitor_node.cpp
mr_path_planner/: CMakeLists.txt  package.xml
mr_path_planner/cfg/: path_planner.cfg
mr_path_planner/include/: path_planner_node.h
mr_path_planner/include/mr_path_planner/: map.h
mr_path_planner/launch/: path_planner.launch
mr_path_planner/src/: path_planner_node.cpp
mr_path_planner/src/mr_path_planner/: map.cpp  micropather.cpp
mr_planner/: CMakeLists.txt  package.xml
mr_planner/cfg/: Planner.cfg
mr_planner/include/: planner_node.h
mr_planner/include/mr_planner/: planner.h
mr_planner/src/: planner_node.cpp
mr_planner/src/mr_planner/: planner.cpp
mr_self_localization/: package.xml
mr_self_localization/cfg/: KalmanFilter.cfg  ParticleFilter.cfg  ekf.yaml  modified_configuration.yaml  particle_filter.yaml  treitlstrasse.yaml
mr_self_localization/include/: self_localization_node.h
mr_self_localization/include/mr_self_localization/: kalman_filter.h  particle_filter.h  pose_filter.h  sample.h  self_localization.h
mr_self_localization/launch/: demo.launch  ekf.launch  my_self_localization.launch  self_localization.launch
mr_self_localization/maps/: mr_map.yaml
mr_self_localization/mr_self_localization/: CMakeLists.txt
mr_self_localization/mr_self_localization/cfg/: SelfLocalization.cfg  ekf.yaml  my_particle_filter.yaml  particle_filter.yaml
mr_self_localization/mr_self_localization/rviz/: rviz.rviz
mr_self_localization/src/: self_localization_node.cpp
mr_self_localization/src/mr_self_localization/: kalman_filter.cpp  kalman_filter3.cpp  particle_filter.cpp  pose_filter.cpp  self_localization.cpp
tuw_checkerboard/launch/: check.launch  check.rviz  demo.launch  demo.rviz
tuw_checkerboard/launch/cv_camera/: head_camera.yaml
tuw_checkerboard/mr_geometry/: setup.py
tuw_checkerboard/mr_geometry/scripts/: test_point2d.py
tuw_checkerboard/mr_launch/launch/: gmapping.launch
tuw_checkerboard/mr_local_planner/cfg/: LocalPlanner.cfg
tuw_checkerboard/mr_local_planner/launch/: planner.launch
(+68 files in other folders)
